# bagidea-office

./: .gitattributes  .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTORS.md  LICENSE  README.md  RELEASING.md  REQUIREMENT.md  build-linux.sh  build-mac.sh  package.json  run-linux.sh
.claude/: settings.json
.github/workflows/: npm-publish.yml  pages.yml
cli/: bagidea  bagidea.js
daemon/: channels.js  constants.js  hook.ps1  liveview.ps1  macproj.sh  maintenance.js  overlay.html  perm.ps1  plugins.js  providers.js  proxy.js  send.js  server.js  skills.js  toolshub.html  watchdog.js  winproj.ps1  wire-hooks-runtime.js  workflow.html
daemon/i18n-seed/: ar.json  de.json  en.json  es.json  fr.json  hi.json  id.json  ja.json  ko.json  pt.json  ru.json  vi.json  zh.json
daemon/tests/: api.test.js  cross-platform.test.js  maintenance.test.js  meetings.test.js  perm-hook.test.js  proxy-timeout.test.js  proxy.test.js  retrieval.test.js  shutdown.test.js  watchdog.test.js  wire-hooks.test.js
daemon/workflow-examples/: daily-ai-news.json  (+6 more)
docs/: 01-ux-architecture.md  02-ui-wireframes.md  03-world-layout.md  04-agent-behavior.md  05-technical-architecture.md  06-performance.md  07-future-expansion.md  08-progression.md  09-monetization.md  10-revolutionary-features.md  DESIGN-extensibility.md
godot/: project.godot
installer/: install-mac.sh  install.ps1  uninstall-mac.sh  update-mac.sh  update.ps1
npm/: README.md  package.json
npm-bagidea/: README.md  cli.js  package.json
shell/: Cargo.toml
shell/src/: main.rs
tests/: test_perf_occlusion.sh
tools/: wallpaper.ps1
web/: docs.html  guides.js  index.html  plugins.html  plugins.json  showcase.html  tools.html  tools.json
(+71 files in other folders)
