[package]
name = "bagidea-office-shell"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true

[dependencies]
tao = "0.35.3"
wry = { version = "0.55.1", features = ["devtools"] }
image = { version = "0.25", default-features = false, features = ["png"] }
tray-icon = "0.24.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Graphics_Gdi", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Security", "Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSResponder", "NSView", "NSApplication", "NSRunningApplication", "NSScreen"] }
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSArray", "NSString"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
